# gamemode-libdbus

./: README.md  gamemode-auto.c  meson.build
examples/: auto.c  simple.c
